add section digits

--- a/styles/style.css
+++ b/styles/style.css
@@ -107,6 +107,8 @@
 
 .two-columns__span-accent {
   font-weight: bold;
+  line-height: 34px;
+  font-size: 24px;
 }
 
 .two-columns__paragraph:last-child {
@@ -114,6 +116,54 @@
 }
 
 .two-columns__paragraph:first-child {
+  margin-top: 0;
+}
+
+.section-title {
+  width: 60%;
+  margin: 0 auto 20px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 0 auto 60px;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  width: 1100px;
+  margin: 0 auto 40px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.table__cell {
+  width: 250px;
+  margin-bottom: 60px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin-bottom: 20px;
   margin-top: 0;
 }
 
