--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 * {
-  /* border: 1px solid red; */
+  border: 1px solid red;
 }
 
 .page {
@@ -46,7 +46,8 @@
 }
 
 .header__link {
-  text-decoration: none;
+  text-decoration-line: none;
+  color: #2f80ed;
 }
 
 .header__main-illustration {
@@ -165,6 +166,47 @@
   font-weight: normal;
   margin-bottom: 20px;
   margin-top: 0;
+}
+
+.feynman {
+  display: flex;
+  position: relative;
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: bottom 0 left 0;
+  min-height: 890px;
+  flex-direction: column;
+}
+
+.feynman__title {
+  margin: 100px 0 70px;
+  width: 648px;
+  align-self: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+}
+
+.feynman__subtitle {
+  margin: 0;
+  align-self: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+
+  text-decoration-line: none;
+  color: #2f80ed;
 }
 
 /* и элемента с модификатором вида ключ-значение */
