--- a/styles/style.css
+++ b/styles/style.css
@@ -228,6 +228,9 @@
 }
 
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  background-position: center;
+  background-size: cover;
   height: 877px;
   width: 877px;
   position: absolute;
