--- a/styles/style.css
+++ b/styles/style.css
@@ -16,13 +16,12 @@
 
 .header__title {
   width: 730px;
-  position: absolute;
-  left: 64px;
   align-self: center;
   font-size: 102px;
   font-weight: bold;
   line-height: 96px;
   z-index: 2;
+  margin: 0 0 0 64px;
 }
 
 .header__subtitle {
@@ -34,6 +33,7 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
 }
 
 .header__link {
@@ -122,7 +122,7 @@
 
 .section-subtitle {
   width: 60%;
-  margin: 0 auto 60px;
+  margin: 0 auto;
   text-align: center;
   line-height: 34px;
   font-size: 24px;
@@ -131,7 +131,7 @@
 
 .table {
   width: 1100px;
-  margin: 0 auto 40px;
+  margin: 0 auto 100px;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
@@ -142,7 +142,7 @@
 
 .table__cell {
   width: 250px;
-  margin-bottom: 60px;
+  margin-top: 60px;
 }
 
 .table__heading {
@@ -179,6 +179,7 @@
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
+  text-align: center;
 }
 
 .feynman__subtitle {
@@ -204,6 +205,7 @@
   background-color: #1f1f1f;
   overflow: hidden;
   position: relative;
+  z-index: -2;
 }
 
 .section-title_theme_dark {
@@ -236,13 +238,13 @@
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: 1;
+  z-index: -1;
 }
 
 .footer {
   background-color: #1f1f1f;
   min-height: 350px;
-  position: relative;
+  display: flex;
 }
 
 .logo_place_footer {
@@ -252,12 +254,10 @@
 }
 
 .footer__columns {
-  min-height: 350px;
   width: 90%;
   display: flex;
   justify-content: space-between;
-  margin: 0 auto;
-  padding: 60px 0 40px;
+  margin: 60px auto 40px;
 }
 
 .footer__column_content_copyright {
