square rotation, links animaited

--- a/blocs/feynman/__link/feynman__link.css
+++ b/blocs/feynman/__link/feynman__link.css
@@ -8,3 +8,8 @@
   text-decoration-line: none;
   color: #2f80ed;
 }
+
+.feynman__link:hover {
+  opacity: 0.8;
+  transition: opacity 1s ease-in;
+}
