--- a/pages/index.css
+++ b/pages/index.css
@@ -48,3 +48,5 @@
 @import url(../blocs/logo/logo.css);
 @import url(../blocs/logo/_place/logo_place_footer.css);
 @import url(../blocs/logo/_place/logo_place_header.css);
+
+@import url(../blocs/rotation/rotation.css);
