--- a/blocs/footer/__column-link/footer__column-link.css
+++ b/blocs/footer/__column-link/footer__column-link.css
@@ -5,3 +5,8 @@
   font-size: 18px;
   font-weight: normal;
 }
+
+.footer__column-link:hover {
+  opacity: 0.8;
+  transition: opacity 1s ease-in;
+}
