--- a/blocs/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocs/two-columns/__paragraph/two-columns__paragraph.css
@@ -6,9 +6,9 @@
 }
 
 .two-columns__paragraph:last-child {
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .two-columns__paragraph:first-child {
-  margin-top: 0;
+  margin: 0;
 }
