--- a/pages/index.css
+++ b/pages/index.css
@@ -60,3 +60,16 @@
 
 @import url(../blocs/video/__frames/video__frames.css);
 @import url(../blocs/video/__frame/video__frame.css);
+
+@import url(../blocs/oakley/oakley.css);
+
+@import url(../blocs/khan/khan.css);
+@import url(../blocs/khan/__author/khan__author.css);
+@import url(../blocs/khan/__book-container/khan__book-container.css);
+@import url(../blocs/khan/__book-pic/khan__book-pic.css);
+@import url(../blocs/khan/__buy-link/khan__buy-link.css);
+@import url(../blocs/khan/__container/khan__container.css);
+@import url(../blocs/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocs/khan/__quote-author/khan__quote-author.css);
+@import url(../blocs/khan/__quote/khan__quote.css);
+@import url(../blocs/khan/__title/khan__title.css);
