--- a/blocs/section-title/section-title.css
+++ b/blocs/section-title/section-title.css
@@ -6,3 +6,11 @@
   font-size: 60px;
   font-weight: bold;
 }
+
+.digits .section-title {
+  margin: 100px auto 20px;
+}
+
+.resources .section-title {
+  margin: 100px auto 20px;
+}
