--- a/pages/index.css
+++ b/pages/index.css
@@ -73,3 +73,6 @@
 @import url(../blocs/khan/__quote-author/khan__quote-author.css);
 @import url(../blocs/khan/__quote/khan__quote.css);
 @import url(../blocs/khan/__title/khan__title.css);
+
+@import url(../blocs/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocs/resources/__logo/resources__logo.css);
