--- a/blocs/resources/__logo-zone/resources__logo-zone.css
+++ b/blocs/resources/__logo-zone/resources__logo-zone.css
@@ -1,4 +1,7 @@
 .resources__logo-zone {
   margin: 80px auto 217px;
   width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
