--- a/pages/index.css
+++ b/pages/index.css
@@ -1,78 +1,68 @@
 @import url(../vendor/normalize.css);
-@import url(../blocs/page/page.css);
-@import url(../blocs/header/header.css);
-@import url(../blocs/feynman/feynman.css);
-@import url(../blocs/kaufman/kaufman.css);
-@import url(../blocs/footer/footer.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/feynman/feynman.css);
+@import url(../blocks/kaufman/kaufman.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/header/__main-illustration/header__main-illustration.css);
+@import url(../blocks/header/__square-pic/header__square-pic.css);
+@import url(../blocks/header/__subtitle/header__subtitle.css);
+@import url(../blocks/header/__title/header__title.css);
+@import url(../blocks/two-columns/two-columns.css);
+@import url(../blocks/two-columns/__brief/two-columns__brief.css);
+@import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
+@import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
+@import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
+@import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
+@import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
+@import url(../blocks/table/table.css);
+@import url(../blocks/table/_theme/table_theme_dark.css);
+@import url(../blocks/table/__text/table__text.css);
+@import url(../blocks/table/__heading/table__heading.css);
+@import url(../blocks/table/__cell/table__cell.css);
+@import url(../blocks/table/__cell/_theme/table__cell_theme_dark.css);
+@import url(../blocks/feynman/__link/feynman__link.css);
+@import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
+@import url(../blocks/feynman/__title/feynman__title.css);
+@import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
+@import url(../blocks/footer/__author/footer__author.css);
+@import url(../blocks/footer/__column-heading/footer__column-heading.css);
+@import url(../blocks/footer/__column-link/footer__column-link.css);
+@import url(../blocks/footer/__column-links/footer__column-links.css);
+@import url(../blocks/footer/__column/_content/footer__column_content_copyright.css);
+@import url(../blocks/footer/__column/_content/footer__column_content_info.css);
+@import url(../blocks/footer/__column/_content/footer__column_content_social.css);
+@import url(../blocks/footer/__columns/footer__columns.css);
+@import url(../blocks/footer/__social-icon/footer__social-icon.css);
+@import url(../blocks/logo/logo.css);
+@import url(../blocks/logo/_place/logo_place_footer.css);
+@import url(../blocks/logo/_place/logo_place_header.css);
+@import url(../blocks/rotation/rotation.css);
+@import url(../blocks/techniques/techniques.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__description/cards__description.css);
+@import url(../blocks/video/__frames/video__frames.css);
+@import url(../blocks/video/__frame/video__frame.css);
+@import url(../blocks/oakley/oakley.css);
+@import url(../blocks/khan/khan.css);
+@import url(../blocks/khan/__author/khan__author.css);
+@import url(../blocks/khan/__book-container/khan__book-container.css);
+@import url(../blocks/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/khan/__buy-link/khan__buy-link.css);
+@import url(../blocks/khan/__container/khan__container.css);
+@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/khan/__quote/khan__quote.css);
+@import url(../blocks/khan/__title/khan__title.css);
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
 
-@import url(../blocs/header/__link/header__link.css);
-@import url(../blocs/header/__main-illustration/header__main-illustration.css);
-@import url(../blocs/header/__square-pic/header__square-pic.css);
-@import url(../blocs/header/__subtitle/header__subtitle.css);
-@import url(../blocs/header/__title/header__title.css);
-
-@import url(../blocs/two-columns/two-columns.css);
-@import url(../blocs/two-columns/__brief/two-columns__brief.css);
-@import url(../blocs/two-columns/__main-text/two-columns__main-text.css);
-@import url(../blocs/two-columns/__paragraph/two-columns__paragraph.css);
-@import url(../blocs/two-columns/__span-accent/two-columns__span-accent.css);
-
-@import url(../blocs/section-subtitle/section-subtitle.css);
-@import url(../blocs/section-subtitle/_theme/section-subtitle_theme_dark.css);
-@import url(../blocs/section-title/section-title.css);
-@import url(../blocs/section-title/_theme/section-title_theme_dark.css);
-
-@import url(../blocs/table/table.css);
-@import url(../blocs/table/_theme/table_theme_dark.css);
-@import url(../blocs/table/__text/table__text.css);
-@import url(../blocs/table/__heading/table__heading.css);
-@import url(../blocs/table/__cell/table__cell.css);
-@import url(../blocs/table/__cell/_theme/table__cell_theme_dark.css);
-
-@import url(../blocs/feynman/__link/feynman__link.css);
-@import url(../blocs/feynman/__subtitle/feynman__subtitle.css);
-@import url(../blocs/feynman/__title/feynman__title.css);
-
-@import url(../blocs/kaufman/__triangle/kaufman__triangle.css);
-
-@import url(../blocs/footer/__author/footer__author.css);
-@import url(../blocs/footer/__column-heading/footer__column-heading.css);
-@import url(../blocs/footer/__column-link/footer__column-link.css);
-@import url(../blocs/footer/__column-links/footer__column-links.css);
-@import url(../blocs/footer/__column/_content/footer__column_content_copyright.css);
-@import url(../blocs/footer/__column/_content/footer__column_content_info.css);
-@import url(../blocs/footer/__column/_content/footer__column_content_social.css);
-@import url(../blocs/footer/__columns/footer__columns.css);
-@import url(../blocs/footer/__social-icon/footer__social-icon.css);
-
-@import url(../blocs/logo/logo.css);
-@import url(../blocs/logo/_place/logo_place_footer.css);
-@import url(../blocs/logo/_place/logo_place_header.css);
-
-@import url(../blocs/rotation/rotation.css);
-
-@import url(../blocs/techniques/techniques.css);
-@import url(../blocs/cards/cards.css);
-@import url(../blocs/cards/__item/cards__item.css);
-@import url(../blocs/cards/__image/cards__image.css);
-@import url(../blocs/cards/__title/cards__title.css);
-@import url(../blocs/cards/__description/cards__description.css);
-
-@import url(../blocs/video/__frames/video__frames.css);
-@import url(../blocs/video/__frame/video__frame.css);
-
-@import url(../blocs/oakley/oakley.css);
-
-@import url(../blocs/khan/khan.css);
-@import url(../blocs/khan/__author/khan__author.css);
-@import url(../blocs/khan/__book-container/khan__book-container.css);
-@import url(../blocs/khan/__book-pic/khan__book-pic.css);
-@import url(../blocs/khan/__buy-link/khan__buy-link.css);
-@import url(../blocs/khan/__container/khan__container.css);
-@import url(../blocs/khan/__quote-author-subline/khan__quote-author-subline.css);
-@import url(../blocs/khan/__quote-author/khan__quote-author.css);
-@import url(../blocs/khan/__quote/khan__quote.css);
-@import url(../blocs/khan/__title/khan__title.css);
-
-@import url(../blocs/resources/__logo-zone/resources__logo-zone.css);
-@import url(../blocs/resources/__logo/resources__logo.css);
+/* .resources * {
+  outline: 1px olive solid;
+} */
