--- a/blocks/two-columns/two-columns.css
+++ b/blocks/two-columns/two-columns.css
@@ -1,11 +1,8 @@
 .two-columns {
   display: flex;
-  margin: 100px auto;
+  margin: 0 auto;
+  padding: 100px 0 100px;
   width: 80%;
   min-width: 784px;
   justify-content: space-between;
-}
-
-.oakley .two-columns {
-  margin: 0 auto;
 }
